2007-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Split primitices.cc.
	* src/object/Makefile.am: Add new files to libobject sources.
	* src/object/code-class.cc: New.
	* src/object/code-class.hh: New.
	* src/object/context-class.cc: New.
	* src/object/context-class.hh: New.
	* src/object/float-class.cc: New.
	* src/object/float-class.hh: New.
	* src/object/integer-class.cc: New.
	* src/object/integer-class.hh: New.
	* src/object/list-class.cc: New.
	* src/object/list-class.hh: New.
	* src/object/object-class.cc: New.
	* src/object/object-class.hh: New.
	* src/object/object.hxx: Call root_classes_initialize function.
	* src/object/primitive-class.cc: New.
	* src/object/primitive-class.hh: New.
	* src/object/primitives.cc:
        Remove moved code and fix static initialization problem.
	* src/object/primitives.hh: Add root_classes_initialize prototype.
	* src/object/string-class.cc: New.
	* src/object/string-class.hh: New.

2007-07-27  mefyl  <mefyl@lrde.epita.fr>

	Temporarily remove %destructor to fix memory errors.
	* src/parser/bison/ugrammar.y: Here.

2007-07-27  mefyl  <mefyl@lrde.epita.fr>

	Add concatenation operator on lists.
	* src/object/primitives.cc: Here.
	* src/object/atom.hh,
	* src/object/atom.hxx,
	* src/object/fwd.hh: Aesthetic changes and coding-style fixes.

2007-07-27  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Coding style changes.
	* src/runner/job.hh (setScheduler): Rename as scheduler_set.
	(getScheduler) Rename as scheduler_get.
	* src/runner/job.hxx: Adjust.
	* src/runner/runner.hh: Aesthetic change.

2007-07-27  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Start to integrate the Scheduler in the UServer.
	* include/kernel/userver.hh (getScheduler): New.
	* include/kernel/userver.hxx (getScheduler): Implement.
	* src/runner/job.hh: A Job is copyable.  Change the interface:
	(ctor): Take a Scheduler in argument.
	(setScheduler, getScheduler): New.
	(run): No longer virtual, calls a protected pure virtual `work'
	instead.